--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "homepage": "https://github.com/widig/torito#readme",
   "dependencies": {
     "express": "^4.15.3",
+    "mongodb": "^2.2.29",
     "request": "^2.81.0"
   },
   "devDependencies": {}
