compiler, #draw->video , websockets
.

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "homepage": "https://github.com/widig/torito#readme",
   "dependencies": {
     "express": "^4.15.3",
+    "express-ws-routes": "^1.1.0",
     "mongodb": "^2.2.29",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "ws": "^3.1.0"
   },
   "devDependencies": {}
 }
